--- a/hallway-interface/public/index.html
+++ b/hallway-interface/public/index.html
@@ -29,6 +29,6 @@
       src="https://app3.weatherwidget.org/js/?id=ww_6665f5d184b9"
     ></script>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
